// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backgroundSize renders 0 1`] = `
Array [
  .c0 {
  background-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundSize renders function 1`] = `
Array [
  .c0 {
  background-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: has;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: has;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundSize renders invalid theme path 1`] = `
Array [
  .c0 {
  background-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundSize renders negative number 1`] = `
Array [
  .c0 {
  background-size: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundSize renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  background-size: July;
}

@media screen and (min-width:November) {
  .c0 {
    background-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-size: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  background-size: July;
}

@media screen and (min-width:November) {
  .c0 {
    background-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-size: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  background-size: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-size: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-size: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  background-size: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-size: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundSize renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    background-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    background-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-size: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-size: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundSize renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  background-size: July;
}

@media May {
  .c0 {
    background-size: August;
  }
}

@media April {
  .c0 {
    background-size: September;
  }
}

@media January {
  .c0 {
    background-size: November;
  }
}

@media April {
  .c0 {
    background-size: August;
  }
}

@media June {
  .c0 {
    background-size: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  background-size: July;
}

@media May {
  .c0 {
    background-size: August;
  }
}

@media April {
  .c0 {
    background-size: September;
  }
}

@media January {
  .c0 {
    background-size: November;
  }
}

@media April {
  .c0 {
    background-size: August;
  }
}

@media June {
  .c0 {
    background-size: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  background-size: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-size: November;
  }
}

@media April {
  .c0 {
    background-size: January;
  }
}

@media January {
  .c0 {
    background-size: December;
  }
}

@media April {
  .c0 {
    background-size: April;
  }
}

@media June {
  .c0 {
    background-size: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  background-size: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-size: November;
  }
}

@media April {
  .c0 {
    background-size: January;
  }
}

@media January {
  .c0 {
    background-size: December;
  }
}

@media April {
  .c0 {
    background-size: April;
  }
}

@media June {
  .c0 {
    background-size: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundSize renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    background-size: July;
  }
}

@media April {
  .c0 {
    background-size: August;
  }
}

@media January {
  .c0 {
    background-size: September;
  }
}

@media April {
  .c0 {
    background-size: November;
  }
}

@media June {
  .c0 {
    background-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    background-size: July;
  }
}

@media April {
  .c0 {
    background-size: August;
  }
}

@media January {
  .c0 {
    background-size: September;
  }
}

@media April {
  .c0 {
    background-size: November;
  }
}

@media June {
  .c0 {
    background-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-size: January;
  }
}

@media April {
  .c0 {
    background-size: December;
  }
}

@media January {
  .c0 {
    background-size: April;
  }
}

@media April {
  .c0 {
    background-size: May;
  }
}

@media June {
  .c0 {
    background-size: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-size: January;
  }
}

@media April {
  .c0 {
    background-size: December;
  }
}

@media January {
  .c0 {
    background-size: April;
  }
}

@media April {
  .c0 {
    background-size: May;
  }
}

@media June {
  .c0 {
    background-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundSize renders postitive number 1`] = `
Array [
  .c0 {
  background-size: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundSize renders string 1`] = `
Array [
  .c0 {
  background-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: June;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: June;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundSize renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`backgroundSize renders valid theme path 1`] = `
Array [
  .c0 {
  background-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
